--- a/thesis.tex
+++ b/thesis.tex
@@ -206,7 +206,7 @@
 
 % \include{chapters/declaration}
 \include{chapters/acknowledgement}
-% \include{chapters/abstract}
+\include{chapters/abstract}
 
 % *********************** Adding TOC and List of Figures ***********************
 
@@ -227,15 +227,15 @@
 
 
 
-% \input{chapters/introduction}
-% \include{chapters/literature/literature_Review}
-% % \part{Benchmarking Programming Technologies}
-% \include{chapters/benchmarking/benchmarking}
-% % \part{Optimizing Application Runtimes}
-% \include{chapters/optimization/optimization}
-% \include{chapters/programming_languages/programming_languages}
-% \input{chapters/conclusion}
-% \include{chapters/appendices/appendices} % Appendices
+\input{chapters/introduction}
+\include{chapters/literature/literature_Review}
+% \part{Benchmarking Programming Technologies}
+\include{chapters/benchmarking/benchmarking}
+% \part{Optimizing Application Runtimes}
+\include{chapters/optimization/optimization}
+\include{chapters/programming_languages/programming_languages}
+\input{chapters/conclusion}
+\include{chapters/appendices/appendices} % Appendices
 
 % ********************************** Back Matter *******************************
 % Backmatter should be commented out, if you are usPing appendices after References
