--- a/thesis-info.tex
+++ b/thesis-info.tex
@@ -1,6 +1,6 @@
 % ************************ Thesis Information & Meta-data **********************
 %% The title of the thesis
-\title{Green Coding: an Empirical Approach to Harness the Energy Consumption of Software Services}
+\title{Green\,Coding: an Empirical~Approach to Harness the Energy~Consumption of Software~Services}
 %\texorpdfstring is used for PDF metadata. Usage:
 %\texorpdfstring{LaTeX_Version}{PDF Version (non-latex)} eg.,
 %\texorpdfstring{$sigma$}{sigma}
@@ -8,16 +8,15 @@
 %% Subtitle (Optional)
 % \subtitle{}
 \crest{
-    \includegraphics[width=.3\linewidth, keepaspectratio]{Figs/logodavidosn}\,
-    \includegraphics[width=.25\linewidth]{Figs/logo-inria}\,
-    \includegraphics[width=.25\linewidth,trim={0 3em 0 0 }]{Figs/logo-univ-lille}\,
-    \includegraphics[width=.25\linewidth]{Figs/logo-cristal}\,
-
-
+    \centering
+    \includegraphics[width=.2\textwidth, keepaspectratio]{Figs/logodavidosn}\,
+    \includegraphics[width=.2\textwidth]{Figs/logo-inria}\,
+    \includegraphics[width=.2\textwidth,trim={0 3em 0 0 }]{Figs/logo-univ-lille}\,
+    \includegraphics[width=.2\textwidth]{Figs/logo-cristal}\,
 }
 
 %% The full name of the author
-\author{Mohammed Chakib \textsc{BELGAID}}
+\author{\emph{Mohammed Chakib} \textsc{BELGAID}}
 
 %% Department (eg. Department of Engineering, Maths, Physics)
 % \dept{Department of Engineering}
@@ -37,33 +36,35 @@
 
 %% Supervisor (optional)
 %% for multiple supervisors, append each supervisor with the \newline command
-\supervisor{Pr. Romain \textsc{ROUVOY} \newline
-    Pr. Lionel \textsc{SEINTURIER}}
+\supervisorlinewidth{.9\textwidth}
+\supervisor{\normalsize
+            Pr. \emph{Romain} \textsc{ROUVOY}, Université de Lille,\newline
+            Pr. \emph{Lionel} \textsc{SEINTURIER}, Université de Lille}
 \supervisorrole{\textbf{Supervisors: }}
-\supervisorlinewidth{0.45\textwidth}
 %% Supervisor Role (optional) - Supervisor (default) or advisor
-
 %% if no title is desired:
 % \supervisorrole{}
 
 %% Supervisor line width: required to align supervisors
 
-\guest{David OLIVIER}
-\guestrole{\textbf{Guest: }}
-\guestlinewidth{0.36\textwidth}
-
-
-
-\Reporter{Pr. Olivier \textsc{BARAIS} \newline
-    Pr. Chantal \textsc{TACONET}}
 \Reporterrole{\textbf{Reporters: }}
-\Reporterlinewidth{0.49\textwidth}
+\Reporterlinewidth{.9\textwidth}
+\Reporter{\normalsize
+        Pr. \emph{Olivier} \textsc{BARAIS}, Université de Rennes~1,\newline
+        Pr. \emph{Chantal} \textsc{TACONET}, Télécom SudParis}
 
-\Jury{Pr. Pierre \textsc{BOULET} \newline
-    Mr. Thomas \textsc{DEGUEULE}
-}
 \Juryrole{\textbf{Examiners: }}
-\Jurylinewidth{0.55\textwidth}
+\Jurylinewidth{.9\textwidth}
+\Jury{\normalsize
+        Pr. \emph{Pierre} \textsc{BOULET}, Université de Lille,\newline
+        Dr. \emph{Thomas} \textsc{DEGUEULE}, Université de Bordeaux
+}
+
+\guest{\normalsize
+        M. \emph{David} OLIVIER, Davidson consulting}
+\guestrole{\textbf{Guest: }}
+\guestlinewidth{.9\textwidth}
+
 %% Advisor (optional)
 %% for multiple advisors, append each advisor with the \newline command
 % \advisor{Romain Rouvoy \newline
@@ -91,7 +92,7 @@
 
 %% Submission date
 % Default is set as {\monthname[\the\month]\space\the\year}
-%\degreedate{September 2014} 
+\degreedate{December 14th, 2022} 
 
 %% Meta information
 \subject{LaTeX} \keywords{{Inria} {Software optimization} {programming language} {energy consumption} {PhD Thesis} {Green Computing} {University of
