update to final version

--- a/thesis.tex
+++ b/thesis.tex
@@ -35,6 +35,7 @@
 \usepackage{multirow}
 \usepackage{tikz}
 \usepackage{afterpage}
+\usepackage{ragged2e}
 % \usepackage{booktabs}
 % \usepackage{hyperref} 
 % \usepackage[table]{xcolor}
