--- a/title_page_fr.tex
+++ b/title_page_fr.tex
@@ -18,6 +18,7 @@
     \includegraphics[width=.24\linewidth,trim={0 3em 0 0 }]{Figs/logo-univ-lille}\,
     \includegraphics[width=.24\linewidth]{Figs/logo-cristal}\,
 
+
 \end{figure}
 \begin{center}
     \LARGE
@@ -31,56 +32,62 @@
 
     Une dissertation pour L'obtension d'un diplome de \emph{Doctorat} en \textsc{Informatique}  \\
 
-    \vspace{0.5cm}
     \large
-    \textbf{Directeur}\\
-    \minipage{0.4\textwidth}
-    \large
+    \textbf{Directeurs}\\
+    \minipage{0.55\textwidth}
+    \RaggedRight
     \vspace{.5cm}
-    Pr. Romain \textsc{ROUVOY}
+    \normalsize
+    Pr. \emph{Romain} \textsc{ROUVOY}, Université de Lille,\newline
+    Pr. \emph{Lionel} \textsc{SEINTURIER}, Université de Lille
     \endminipage
-    \vspace{0.5cm}
-    \large
-    \\
-    \textbf{Co-Directeur}\\
-    \minipage{0.4\textwidth}
-    \large
-    \vspace{.5cm}
-    Pr. Lionel \textsc{SEINTURIER}
-    \endminipage
-    \vspace{0.5cm}
+    \vspace{0.6cm}
+    % \large
+    % \\
+    % \textbf{Co-Director}\\
+    % \minipage{0.4\textwidth}
+    % \large
+    % \vspace{.5cm}
+    % Pr. Lionel \textsc{SEINTURIER}
+    % \endminipage
+    % \vspace{0.5cm}
     %  reporters  
-    \\
+
     \large
     \textbf{Examinateurs}\\
-    \minipage{0.4\textwidth}
-    \large
+    \minipage{0.55\textwidth}
+    \normalsize
+
     \vspace{.5cm}
-    Pr. Pierre \textsc{BOULET} \newline
-    Dr. Thomas \textsc{DEGUEULE}
+
+
+    Pr. \emph{Pierre} \textsc{BOULET}, Université de Lille,\newline
+    Dr. \emph{Thomas} \textsc{DEGUEULE}, Université de Bordeaux
     \endminipage
     \vspace{.5cm}
     \\
     \large
     \textbf{Rapporteurs}\\
-    \minipage{0.4\textwidth}
-    \large
+    \minipage{0.55\textwidth}
+
     \vspace{.5cm}
-    Pr. Olivier \textsc{BARAIS} \newline
-    Pr. Chantal \textsc{TACONET}
+    \normalsize
+    Pr. \emph{Olivier} \textsc{BARAIS}, Université de Rennes~1,\newline
+    Pr. \emph{Chantal} \textsc{TACONET}, Télécom SudParis
+
     \endminipage
-    \vspace{0.5cm}
+    \vspace{0.6cm}
     \\
     \large
     \textbf{Invité}\\
-    \minipage{0.4\textwidth}
-    \large
+    \minipage{0.55\textwidth}
+    \normalsize
     \vspace{.5cm}
-    Mr. David \textsc{OLIVIER}\\
+    M. \emph{David} OLIVIER, Davidson consulting
     \endminipage
-    \vspace{0.5cm}
+    \vspace{0.8cm}
     \\
-    \Large
+    \large
     \emph{Université de Lille}
     \minipage{0.75\textwidth}
     \'Ecole Doctorale MADIS
