--- a/title_page.tex
+++ b/title_page.tex
@@ -18,14 +18,15 @@
     \includegraphics[width=.24\linewidth,trim={0 3em 0 0 }]{Figs/logo-univ-lille}\,
     \includegraphics[width=.24\linewidth]{Figs/logo-cristal}\,
 
+
 \end{figure}
 \begin{center}
     \LARGE
-    \textbf{Green Coding} : an Empirical Approach to Harness the Energy Consumption of Software Services
+    Green\,Coding: an Empirical~Approach to Harness the Energy~Consumption of Software~Services
 
     \vspace{.8cm}
     \Large
-    \textbf{Mohammed Chakib \textsc{BELGAID}}
+    \textbf{\emph{Mohammed Chakib} \textsc{BELGAID}}
     \vspace{0.8cm}
     \large
 
@@ -50,54 +51,61 @@
     % \vspace{0.5cm}
 
     \large
-    \textbf{Director}\\
-    \minipage{0.4\textwidth}
-    \large
+    \textbf{Supervisors}\\
+    \minipage{0.55\textwidth}
+    \RaggedRight
     \vspace{.5cm}
-    Pr. Romain \textsc{ROUVOY}
+    \normalsize
+    Pr. \emph{Romain} \textsc{ROUVOY}, Université de Lille,\newline
+    Pr. \emph{Lionel} \textsc{SEINTURIER}, Université de Lille
     \endminipage
-    \vspace{0.5cm}
-    \large
-    \\
-    \textbf{Co-Director}\\
-    \minipage{0.4\textwidth}
-    \large
-    \vspace{.5cm}
-    Pr. Lionel \textsc{SEINTURIER}
-    \endminipage
-    \vspace{0.5cm}
+    \vspace{0.6cm}
+    % \large
+    % \\
+    % \textbf{Co-Director}\\
+    % \minipage{0.4\textwidth}
+    % \large
+    % \vspace{.5cm}
+    % Pr. Lionel \textsc{SEINTURIER}
+    % \endminipage
+    % \vspace{0.5cm}
     %  reporters  
-    \\
+
     \large
     \textbf{Examiners}\\
-    \minipage{0.4\textwidth}
-    \large
+    \minipage{0.55\textwidth}
+    \normalsize
+
     \vspace{.5cm}
-    Pr. Pierre \textsc{BOULET} \newline
-    Dr. Thomas \textsc{DEGUEULE}
+
+
+    Pr. \emph{Pierre} \textsc{BOULET}, Université de Lille,\newline
+    Dr. \emph{Thomas} \textsc{DEGUEULE}, Université de Bordeaux
     \endminipage
     \vspace{.5cm}
     \\
     \large
     \textbf{Reporters}\\
-    \minipage{0.4\textwidth}
-    \large
+    \minipage{0.55\textwidth}
+
     \vspace{.5cm}
-    Pr. Olivier \textsc{BARAIS} \newline
-    Pr. Chantal \textsc{TACONET}
+    \normalsize
+    Pr. \emph{Olivier} \textsc{BARAIS}, Université de Rennes~1,\newline
+    Pr. \emph{Chantal} \textsc{TACONET}, Télécom SudParis
+
     \endminipage
-    \vspace{0.5cm}
+    \vspace{0.6cm}
     \\
     \large
     \textbf{Guest}\\
-    \minipage{0.4\textwidth}
-    \large
+    \minipage{0.55\textwidth}
+    \normalsize
     \vspace{.5cm}
-    Mr. David \textsc{OLIVIER}\\
+    M. \emph{David} OLIVIER, Davidson consulting
     \endminipage
-    \vspace{0.5cm}
+    \vspace{0.8cm}
     \\
-    \Large
+    \large
     \emph{University of Lille}
     \minipage{0.75\textwidth}
     \'Ecole Doctorale MADIS
