fix bold text in the titile

--- a/title_page_fr.tex
+++ b/title_page_fr.tex
@@ -22,7 +22,7 @@
 \end{figure}
 \begin{center}
     \LARGE
-    \textbf{Éco-développement} : une approche empirique pour réduire la consommation énergétique des logiciels
+    Eco-développement : une approche empirique pour réduire la consommation~énergétique des logiciels
 
     \vspace{.8cm}
     \Large
