--- a/title_page_fr.tex
+++ b/title_page_fr.tex
@@ -26,7 +26,7 @@
 
     \vspace{.8cm}
     \Large
-    \textbf{Mohammed Chakib \textsc{BELGAID}}
+    \textbf{\emph{Mohammed Chakib} \textsc{BELGAID}}
     \vspace{0.8cm}
     \large
 
