--- a/title_page.tex
+++ b/title_page.tex
@@ -72,14 +72,22 @@
     %  reporters  
 
     \large
-    \textbf{Examiners}\\
+    \textbf{Jury President}\\
     \minipage{0.55\textwidth}
     \normalsize
 
     \vspace{.5cm}
 
+    Pr. \emph{Pierre} \textsc{BOULET}, Université de Lille
+    \endminipage
+    \vspace{.5cm}
+    \\
 
-    Pr. \emph{Pierre} \textsc{BOULET}, Université de Lille,\newline
+    \large
+    \textbf{Examiner}\\
+    \minipage{0.55\textwidth}
+    \normalsize
+    \vspace{.5cm}
     Dr. \emph{Thomas} \textsc{DEGUEULE}, Université de Bordeaux
     \endminipage
     \vspace{.5cm}
