--- a/title_page_fr.tex
+++ b/title_page_fr.tex
@@ -30,8 +30,8 @@
     \vspace{0.8cm}
     \large
 
-    Une dissertation pour L'obtension d'un diplome de \emph{Doctorat} en \textsc{Informatique}  \\
-
+    Une dissertation pour l'obtention du diplôme de \emph{Docteur} en \textsc{Informatique}  \\
+    \vspace{0.8cm}
     \large
     \textbf{Directeurs}\\
     \minipage{0.55\textwidth}
@@ -54,14 +54,24 @@
     %  reporters  
 
     \large
-    \textbf{Examinateurs}\\
+    \textbf{Président du jury}\\
+    \minipage{0.55\textwidth}
+    \normalsize
+
+    \vspace{.5cm}
+    Pr. \emph{Pierre} \textsc{BOULET}, Université de Lille
+
+    \endminipage
+    \vspace{.5cm}
+    \\
+    \large
+    \textbf{Examinateur}\\
     \minipage{0.55\textwidth}
     \normalsize
 
     \vspace{.5cm}
 
 
-    Pr. \emph{Pierre} \textsc{BOULET}, Université de Lille,\newline
     Dr. \emph{Thomas} \textsc{DEGUEULE}, Université de Bordeaux
     \endminipage
     \vspace{.5cm}
